@@ -4,9 +4,9 @@
 typedef struct {
 	int query, setalias;
 	int addiface, force, traffic;
-	int livetraffic, defaultiface, removeiface, livemode;
+	int livetraffic, defaultiface, removeiface, renameiface, livemode;
 	uint64_t dbifcount;
-	char interface[32], alias[32], filename[512];
+	char interface[32], alias[32], newifname[32], filename[512];
 	char definterface[32], cfgfile[512], *ifacelist, jsonmode, xmlmode;
 	char databegin[18], dataend[18];
 } PARAMS;
@@ -15,6 +15,7 @@ void initparams(PARAMS *p);
 void showhelp(PARAMS *p);
 void showlonghelp(PARAMS *p);
 void handleremoveinterface(PARAMS *p);
+void handlerenameinterface(PARAMS *p);
 void handleaddinterface(PARAMS *p);
 void handlesetalias(PARAMS *p);
 void handleshowdatabases(PARAMS *p);
